# tensorlibrary

./: .gitignore  README.md  pyproject.toml
examples/: active_learning.py  check_tKRR.py  model_test.py  test_model.pkl  tt_krr_classification.py
notebooks/: CP_difference.ipynb  convergenc_auc.pgf  test_tt.ipynb  test_tt_krr.ipynb
src/tensorlibrary/: __init__.py  random.py
src/tensorlibrary/Decompositions/: CP.py  TTmatrix.py  TensorTrain.py  Tucker.py
src/tensorlibrary/decompositions/: TTmatrix.py  TensorTrain.py
src/tensorlibrary/learning/: __init__.py  _cp_km.py  _cp_krr.py  active.py  cp_krr.py  features.py  t_krr.py  t_svm.py  transfer.py  tt_krr.py
src/tensorlibrary/linalg/: __init__.py  linalg.py
test/Decompositions/: test_qtt.py  test_tensortrain.py  test_ttmatrix.py
test/decompositions/: test_qtt.py  test_tensortrain.py  test_ttmatrix.py
