[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "tensorlibrary"
version = "0.0.2"
authors = [
    { name="sderooij"},
]
description = "A package for simple tensor network computations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.4",
    "numpy>=1.20.0",
    "scipy>=1.7.1",
    "tensornetwork>=0.4.6",
    "numba",
    "tensorly",
    "primefac"
]